[gd_scene load_steps=7 format=3 uid="uid://cmcqh1osjxjfn"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_k8vqd"]
[ext_resource type="Script" path="res://scripts/combat/AttackSystem.gd" id="2_attack"]
[ext_resource type="Script" path="res://scripts/player/DashSystem.gd" id="3_dash"]
[ext_resource type="Script" path="res://scripts/player/AbilitySystem.gd" id="4_ability"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1yxb2"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v7xqh"]
radius = 0.4
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 1
collision_mask = 7
script = ExtResource("1_k8vqd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_1yxb2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_v7xqh")

[node name="CameraArm" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="VisualEffects" type="Node3D" parent="."]

[node name="Audio" type="AudioStreamPlayer3D" parent="."]

[node name="AttackSystem" type="Node" parent="."]
script = ExtResource("2_attack")

[node name="DashSystem" type="Node" parent="."]
script = ExtResource("3_dash")

[node name="AbilitySystem" type="Node" parent="."]
script = ExtResource("4_ability")